styles.css
*{
    font-family: monospace;
    background-color: transparent;
    
}
body{
    background-color: #f9f5f5;
    margin: 0;
    padding: 0;
    width: 100%;
    min-height: 100%;
}
.body{
    background-image: url(wild-nature-7680x4320.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-blend-mode: normal;
    background-position: center;
    background-attachment: fixed;

}
.loader {
    width: 120px;
    height: 120px;
    border: 8px solid black;
    border-top-color: grey;
    position: relative;
    border-radius: 50%;
    animation: spin 1s linear infinite, slide 2.0s forwards;
}
@keyframes spin {
    to { transform: rotate(360deg); }
}
@keyframes slide {

    from {
        opacity: 1;
        transform: rotate(0deg);
        pointer-events: auto;
    }
    to{
        opacity: 0;
        transform: rotate(360deg);
        pointer-events: none;
    }
}
.div-loader{
    position: fixed;
    inset: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 9999; /* this puts it ahead of everything else in terms of layout layers*/
    pointer-events: none; /* lets you click pass the loader since it is the most front layer*/

}

.center{
    margin: auto;
    max-width: 50%;
    align-content: center;
    text-align: center;
}
.centerabout{
    margin: auto;
    max-width: 80%;
    align-content: center;
    text-align: center;
}
.outdiv{
    text-align: center;
    margin: auto;
    color: #ffffff;
    background-color: rgb(15, 16, 16);
    font-size: 20px;
    border-radius: 10px;
    width: 50%;
    opacity: 0.9;
    padding: 10px;
}
    
h3{
    text-align: center;
    color: #f9f9f9;
    font-size: 20px;
    padding: 5px;
    border-radius: 10px;
    background-color: rgb(15, 16, 16);

}
h5{
    text-align: center;
    color: #f9f9f9;
    font-size: 30px;
    border-radius: 10px;
    background-color: rgb(15, 16, 16);
}
.p1{
    margin: auto;
    text-align: center;
    color: #fffefe;    
    font-size: 15px;
    border-radius: 15px;
    opacity: 0.9;
    background-color: #060606;
}
.p2{
    text-align: center;
    color: #fffefe;    
    font-size: 15px;
    border-radius: 10px;
    opacity: 0.9;
    background-color: #060606;
    padding : 5px;
}
.p3{
    text-align: center;
    color: #fffefe;    
    font-size: 25px;
    border-radius: 10px;
    opacity: 0.9;
    background-color: #060606;
    padding : 1px;
}
.p4{
    
    text-align: center;
    color: #fffefe;     
    font-size: 15px;
    border-radius: 10px;
    opacity: 1;
    background-color: #060606;
    padding : 5px;
    line-height: 2;
}
.img{
    
    float: left;
    border-radius: 10px;
}
/* .pfooter{
    text-align: center;
    color: #ffffff;
    font-size: 20px;
    padding-top: 50px;
} */
.quote{
    text-align: center;
    margin: auto;
    color: #ffffff;
    background-color: rgb(15, 16, 16);
    font-size: 30px;
    border-radius: 10px;
    width: 100%;
    opacity: 0.9;

}
.button{
    text-align: center;
    max-width: 50%;
    font-size: 15px;
    margin: 20px;
    padding: 10px 5px;
    margin-top: 20px;
    background-color: #0a0909;
    color: #f4f0f0;
    opacity: 1;
    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
}
.button:hover{
    background-color: #060606;
    color: #ffffff;
    opacity: 0.9;
}
.button1{
    text-align: center;
    max-width: 50%;
    font-size: 15px;
    margin: 20px;
    padding: 10px 5px;
    margin-top: 20px;
    background-color: #0a0909;
    color: #f4f0f0;
    opacity: 1;
    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
}
.button1:hover{
    background-color: #060606;
    color: #ffffff;
    opacity: 0.9;
}

.link{
    text-align: center;
    color: #4a0101;
    font-size: 20px;
    margin-top: 20px;
}
/* .footer{
    margin: auto;
    text-align: center;
    position: relative;
    padding-top: 100px;
    border-radius: 20px;
    border-style: none;
} */
/* .divfooter{
    text-align: center;
    position: relative;
    width: 100%;
    opacity: 1;
} */
@media (max-width: 1024px) and (orientation: landscape) {
    body {
        background-size: cover;
        background-position: center;
        width: 100%;
    }
}
.navbar{
    overflow: hidden;
    background-color: #060606;
    text-align: center;
    padding: 10px 40px;
    font-size: 17px;
    text-decoration: none;
    color: #f4f0f0;
    border-radius: 10px;
    opacity: 0.9;
}
.navbar:hover{
    background-color: #ddd;
    color: black;
}
.nav-center{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    padding-top: 20px;
}
/*this is the css for the sticky socials button */
.socials {
    position: fixed;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
}

.socials a {
    display: block;
    text-align: center;
    padding: 16px;
    transition: all 0.3s ease;
    color: white;
    font-size: 20px;
}

.socials a:hover {
    opacity: 0.7;
}
.fa-linkedin {
    background: #007bb5;
    color: white;
}
.fa-github {
    background: #333;
    color: white;
}
.fa-instagram {
    background: #e1306c;
    color: white;
}
.accordion {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    transition: 0.4s;
}
  
.active, .accordion:hover {
    background-color: #ccc; 
}
  
.panel {
    padding: 0 18px;
    display: none;
    background-color: white;
    overflow: hidden;
}
footer {
    border-style: solid;
    border-color: black;
    padding: 10px;
    text-align: center;
    position: fixed;
    width: 100%;
    color: white;
    left: 0;
    bottom: 0;
    background-color: black;
}

